# Tacit

./: .gitattributes  .gitignore  AUDIT_REVIEW.md  Cargo.toml  README.md  Tacit-crate-blueprint-FINAL.md  Tacit-v1.0-FINAL.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/tacit-bindgen/: Cargo.toml
crates/tacit-bindgen/src/: main.rs
crates/tacit-core/: Cargo.toml
crates/tacit-core/src/: config.rs  error.rs  event.rs  frame.rs  frontier.rs  hlc.rs  ids.rs  lib.rs  model.rs  presence.rs  telemetry.rs  version.rs
crates/tacit-crdt/: Cargo.toml
crates/tacit-crdt/src/: block_doc.rs  cache.rs  converter.rs  lib.rs  meta_doc.rs
crates/tacit-crypto/: Cargo.toml
crates/tacit-crypto/src/: identity.rs  lib.rs  noise.rs  pairing.rs  secret_storage.rs  session.rs  signature.rs
crates/tacit-ffi/: Cargo.toml  uniffi.toml
crates/tacit-ffi/examples/: minimal_sync.rs
crates/tacit-ffi/src/: ble.rs  command_bus.rs  doc_executor.rs  engine.rs  error.rs  event_bus.rs  lib.rs  listener.rs  runtime.rs  view.rs
crates/tacit-session/: Cargo.toml
crates/tacit-session/src/: codec.rs  lib.rs  loopback.rs
crates/tacit-session/tests/: convergence.rs
crates/tacit-store/: Cargo.toml
crates/tacit-store/src/: compression.rs  dao.rs  lib.rs  store.rs
crates/tacit-sync/: Cargo.toml
crates/tacit-sync/benches/: sync_benchmarks.rs
crates/tacit-sync/src/: checkpoint.rs  doc_store.rs  engine.rs  hot_path.rs  lib.rs  peer_registry.rs  pending.rs  priority_queue.rs  recovery.rs  watermarks.rs
crates/tacit-tests/: Cargo.toml
crates/tacit-tests/src/: lib.rs
crates/tacit-tests/tests/: chaos.rs  convergence.rs  fast_resume.rs  fuzz_codec.rs  fuzz_crdt.rs  fuzz_sms.rs  integration.rs  long_run.rs  offline_catchup.rs  quic_network.rs  security.rs  sqlite_pool_eval.rs
crates/tacit-transport/: Cargo.toml
crates/tacit-transport-ble/: Cargo.toml
crates/tacit-transport-ble/src/: backend.rs  bluer_backend.rs  lib.rs  platform.rs  presence.rs  transport.rs
crates/tacit-transport-quic/: Cargo.toml
crates/tacit-transport-quic/src/: config.rs  lib.rs  transport.rs
crates/tacit-transport-relay/: Cargo.toml
crates/tacit-transport-relay/src/: admission.rs  client.rs  lib.rs  protocol.rs  relay_transport.rs  server.rs
crates/tacit-transport-sms/: Cargo.toml
crates/tacit-transport-sms/src/: backend.rs  codec.rs  lib.rs  transport.rs
crates/tacit-transport/src/: batch.rs  control.rs  event.rs  frame_codec.rs  lib.rs  mdns.rs  multiplexer.rs  negotiation.rs  snapshot_reassembly.rs  store_forward.rs  transport.rs
