[package]
name = "tacit-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "设备身份、签名、Noise 握手、session key 管理"

[dependencies]
tacit-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true
snow.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["std_rng"] }
