[package]
name = "tacit-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite 持久化、各 DAO、WAL/双缓冲快照"

[dependencies]
tacit-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
zstd.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
