[package]
name = "tacit-transport-ble"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "BLE Presence 适配"

[dependencies]
tacit-core.workspace = true
tacit-transport.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true
async-trait = "0.1"

[dev-dependencies]
