[package]
name = "tacit-transport-ble"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "BLE Presence 适配"

[features]
default = []
# Linux bluez BLE 后端（需要 bluez daemon + libdbus）
linux-bluez = ["dep:bluer", "dep:tokio-util", "dep:futures"]

[dependencies]
tacit-core.workspace = true
tacit-transport.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
hex.workspace = true
# 可选：Linux bluez BLE 后端
bluer = { version = "0.17", optional = true, features = ["bluetoothd"] }
tokio-util = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
