[package]
name = "tacit-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Transport trait、通道抽象、事件定义、preferred_path hint"

[dependencies]
tacit-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true
async-trait = "0.1"

[dev-dependencies]
